--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "^7.1.1",
+    "axios": "^0.16.2",
     "babel-core": "^6.25.0",
     "babel-loader": "7.x",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -22,6 +23,8 @@
     "postcss-loader": "^2.0.5",
     "postcss-smart-import": "^0.7.4",
     "precss": "^1.4.0",
+    "pug": "^2.0.0-rc.2",
+    "pug-loader": "^2.3.0",
     "rails-erb-loader": "^5.0.1",
     "resolve-url-loader": "^2.0.2",
     "sass-loader": "^6.0.5",
@@ -29,6 +32,7 @@
     "vue": "^2.3.4",
     "vue-loader": "^12.2.1",
     "vue-template-compiler": "^2.3.4",
+    "vuex": "^2.3.1",
     "webpack": "^2.6.1",
     "webpack-manifest-plugin": "^1.1.0",
     "webpack-merge": "^4.1.0"
